--- a/circus/app/build.gradle
+++ b/circus/app/build.gradle
@@ -24,10 +24,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+
+
+    implementation "androidx.core:core-ktx:$lifecycle_version"
+    implementation "androidx.appcompat:appcompat:$lifecycle_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+
+    //View Model and Live Data
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1'
+
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0-alpha1"
+
+
+    // Test section
+    // optional - Test helpers for LiveData
+    testImplementation "androidx.arch.core:core-testing:2.0.0-alpha1"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
