--- a/circus/app/build.gradle
+++ b/circus/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
     implementation "androidx.core:core-ktx:$lifecycle_version"
@@ -36,8 +36,8 @@ dependencies {
     //View Model and Live Data
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0-alpha1"
-
 
     // Test section
     // optional - Test helpers for LiveData
